--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
         "vue": "^3.4.36"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/progress": "^0.1.2",
         "@inertiajs/vue3": "^1.2.0",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.41",
+        "sweetalert2": "^11.6.13",
         "tailwindcss": "^3.4.7",
-        "vue-router": "^4.4.3"
+        "vue-router": "^4.4.3",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
